# alain-bot

./: .coderabbit.yaml  .gitignore  README.md  docker-compose.yml  pyproject.toml
.circleci/: config.yml
ai_client/: __init__.py  anthropic.py  base.py  config.py  exceptions.py  factory.py  retry.py
bot/: __init__.py  main.py
bot/handlers/: __init__.py  debug.py  northstar.py  onboarding.py  reset.py  start.py
db/: __init__.py  connection.py  migrate.py  models.py  repository.py  supabase_client.py
db/migrations/: V001__initial_schema.sql  V002__user_profile.sql  V003__pondering.sql  V004__add_interpretation_to_pondering.sql  init.sql
prompts/: __init__.py  base.py  onboarding.py  pondering.py
rate-limit-fixtures/: README.md
rate-limit-fixtures/pro-files-cap/: file-001.txt  file-002.txt  file-003.txt  file-004.txt  file-005.txt  file-006.txt  file-007.txt  file-008.txt  file-009.txt  file-010.txt  file-011.txt  file-012.txt  file-013.txt  file-014.txt  file-015.txt  file-016.txt  file-017.txt  file-018.txt  file-019.txt  file-020.txt  file-021.txt  file-022.txt  file-023.txt  file-024.txt  file-025.txt  file-026.txt  file-027.txt  file-028.txt  file-029.txt  file-030.txt  file-031.txt  file-032.txt  file-033.txt  file-034.txt  file-035.txt  file-036.txt  file-037.txt  file-038.txt  file-039.txt  file-040.txt  (+265 more)
scripts/: migrate.sh
services/: __init__.py  debug_tools.py  onboarding.py  pondering.py
